# diff-fret

./: 404.html  ANNOUNCEMENT_GUIDE.md  README.md  index.html  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  test.yml
api/kernels/: index.html
diff_fret/: __init__.py  kernels.py
docs/: index.md  theory.md
examples/: ensemble_averaging.py
examples/interactive_tutorials/: fret_efficiency_tutorial.ipynb
search/: search_index.json
tests/: test_av.py  test_kernels.py
theory/: index.html
